# llm-learning

./: LLM-Roadmap.md  pyproject.toml
llm-learning-notes/: 00_Roadmap.md  01_Transformer.md  CS324-lecture-notes-prompt.md
llm-learning-notes/.obsidian/: workspace-mobile.json  workspace.json
projects/: micrograd_from_scratch.ipynb
